메인문구변경

--- a/mobile/main.html
+++ b/mobile/main.html
@@ -183,7 +183,7 @@
                     <div class="vsLeft">
                         <a href="./buy_list.html">
                             <h3 class="vsTit">믿을 수 있는 중고차 서비스</h3>
-                            <span class="vsEx">롯데렌터카 중고차 서비스<br>T CAR</span>
+                            <span class="vsEx">롯데렌터카<br>T CAR</span>
                             <i class="btnAroow"></i> 
                         </a>
                     </div>
