주소표시줄 테스트

--- a/mobile/main.html
+++ b/mobile/main.html
@@ -39,6 +39,8 @@
         // 섹션별 에니메이션
         AOS.init({duration:1200,offset:100});
     });
+    //모바일 주소표시줄 초기화
+    $(window).load(function(){  setTimeout(scrollTo, 0,0,1);});
 </script>
 <style>
     /*//메인에서만 보이도록 처리하려고 했나본데?*/
