--- a/mobile/main.html
+++ b/mobile/main.html
@@ -3,7 +3,8 @@
 <head>
 <title>롯데렌터카 마이카세이브</title>
 <meta charset="utf-8">
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+<!-- <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" /> -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="format-detection" content="telephone=no, address=no, email=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="">
@@ -39,8 +40,6 @@
         // 섹션별 에니메이션
         AOS.init({duration:1200,offset:100});
     });
-    //모바일 주소표시줄 초기화
-    $(window).load(function(){  setTimeout(scrollTo, 0,0,1);});
 </script>
 <style>
     /*//메인에서만 보이도록 처리하려고 했나본데?*/
@@ -190,11 +189,26 @@
                         </a>
                     </div>
                     <div class="main_bg_video">
-                      <video class="main_video_content" autoplay muted loop>
+                      <!-- <video class="main_video_content" autoplay muted loop playsinline>
                         <source src="./images/main_visual.mp4" type="video/mp4" />
-                        <!-- <source src="img/video.webm" type="video/webm" /> -->
-                      </video>
+                        <source src="img/video.webm" type="video/webm" />
+                      </video> -->
                     </div>
+                    <script>
+                        $(function*(){
+                            $(".main_bg_video").vide({
+                                mp4 : "./images/main_visual.mp4",
+                            },{
+                                volume : 1,
+                                playbackRate : 1,
+                                muted : true,
+                                loop : true,
+                                autoplay : true,
+                                resizing : true,
+                                bgColor : 'transparent'
+                            });
+                        })
+                      </script>
                     <!-- <div class="vsRight">
                         <a href="./rent_list.html">
                             <h3 class="vsTit">렌트하기</h3>
