--- a/mobile/main.html
+++ b/mobile/main.html
@@ -183,32 +183,18 @@
                 <div class="visualTxt">
                     <div class="vsLeft">
                         <a href="./buy_list.html">
-                            <h3 class="vsTit">믿을 수 있는 중고차 서비스</h3>
-                            <span class="vsEx">롯데렌터카<br>T CAR</span>
+                            <h3 class="vsTit">구매하기</h3>
+                            <span class="vsEx">3일 환불보장<br />홈서비스 받고 구매하기</span>
                             <i class="btnAroow"></i> 
                         </a>
                     </div>
                     <div class="main_bg_video">
-                      <!-- <video class="main_video_content" autoplay muted loop playsinline>
+                      <video class="main_video_content" autoplay muted loop playsinline>
                         <source src="./images/main_visual.mp4" type="video/mp4" />
                         <source src="img/video.webm" type="video/webm" />
-                      </video> -->
+                      </video>
                     </div>
-                    <script>
-                        $(function*(){
-                            $(".main_bg_video").vide({
-                                mp4 : "./images/main_visual.mp4",
-                            },{
-                                volume : 1,
-                                playbackRate : 1,
-                                muted : true,
-                                loop : true,
-                                autoplay : true,
-                                resizing : true,
-                                bgColor : 'transparent'
-                            });
-                        })
-                      </script>
+
                     <!-- <div class="vsRight">
                         <a href="./rent_list.html">
                             <h3 class="vsTit">렌트하기</h3>
@@ -229,9 +215,11 @@
                     if ($(window).scrollTop() > 300) {
                         $('.srhBx').css("position","static");
                         $('.srhBx > .txt').css("color","#333");
+                        $('.layout--navigation').fadeout();
                     } else {
                         $('.srhBx').css("position","fixed");
                         $('.srhBx > .txt').css("color","#fff");
+                        $('.layout--navigation').fadeIn();
                     }
                 });
                 </script>
@@ -980,6 +968,8 @@
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
+                                                    <dd>2021.09(22년형)</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">12,000,000</span>원</dt>
@@ -997,6 +987,8 @@
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
+                                                    <dd>2021.09(22년형)</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">26,300,000</span>원</dt>
@@ -1008,6 +1000,8 @@
                                     <li data-aos="fade-up">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
+
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                             </div>
@@ -1015,7 +1009,7 @@
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
                                                     <dd>2021.09(22년형)</dd>
-                                                    <dd>하이브리드</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">47,000,000</span>원</dt>
@@ -1027,12 +1021,15 @@
                                     <li data-aos="fade-up">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
+                                                    <dd>2021.09(22년형)</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">12,600,000</span>원</dt>
@@ -1044,6 +1041,7 @@
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                             </div>
@@ -1061,12 +1059,15 @@
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
+                                                    <dd>2021.09(22년형)</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">26,300,000</span>원</dt>
@@ -1078,6 +1079,7 @@
                                     <li data-aos="fade-up">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                             </div>
@@ -1097,12 +1099,15 @@
                                     <li data-aos="fade-up">
                                         <a href="#">
                                             <span class="state">상담진행중</span>
+                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
                                                     <dt>현대 쏘나타(DN8) 하이브리드 2.0 HEV 인스퍼레이션</dt>
+                                                    <dd>2021.09(22년형)</dd>
+                                                    <dd>12,700km</dd>
                                                 </dl>
                                                 <dl class="txtPrice">
                                                     <dt><span class="bold">12,600,000</span>원</dt>
@@ -1118,7 +1123,7 @@
                 </div>
 
                 <div class="mainBannerWrap" data-aos="fade-up">
-                    <div class="conTit" data-aos-once="true">많이 찾는 서비스</div>
+                    <!-- <div class="conTit" data-aos-once="true">많이 찾는 서비스</div>
                     <ul class="mainBanList">
                         <li>
                             <a href="#" class="bg1">
@@ -1138,8 +1143,33 @@
                                 <span class="banEx">마이카세이브 제휴 금융사를 통해<br> 대출가능금액을 확인하세요.</span>
                             </a>
                         </li>
+                    </ul> -->
+                    <div class="conTit" data-aos-once="true">중고차 할부금융</div>
+                    <div class="subTitle">마이카세이브 제휴 금융사를 통해<br />대출가능금액을 확인하세요.</div>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="./images/renew/icon/finance-ci-lotte.png" />
+                                <span>롯데캐피탈</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/renew/icon/finance-ci-kb.png" />
+                                <span>KB캐피탈</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/renew/icon/finance-ci-sh.png" />
+                                <span>신한카드</span>
+                            </a>
+                        </li>
                     </ul>
+
                 </div>
+
+
             </div>
         </div>
         
@@ -1263,19 +1293,25 @@
         let carBuyBx = new Swiper('.carBuyBx',{
             slidesPerView: 2,
             grabCursor: true,
-            spaceBetween: 4,
+            spaceBetween: 10,
             loop: true,
             autoplay: {
                 enabled: true,
                 delay: 3000,
                 pauseOnMouseEnter: true,
             },
+            breakpoints: {
+                380: {
+                slidesPerView: 2,  //브라우저가 768보다 클 때
+                spaceBetween: 7,
+                }
+            },
         })
         //키워드탭 스와이프 영역제어
         let Keytab = new Swiper('.Keytab',{
             slidesPerView: 1.3,
             grabCursor: true,
-            spaceBetween: 4,
+            spaceBetween: 16,
             loop: true,
             autoplay: {
                 enabled: true,
