--- a/mobile/main.html
+++ b/mobile/main.html
@@ -189,7 +189,7 @@
                         </a>
                     </div>
                     <div class="main_bg_video">
-                      <video class="main_video_content" autoplay muted loop playsinline>
+                      <video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
                         <source src="./images/main_visual.mp4" type="video/mp4" />
                         <source src="img/video.webm" type="video/webm" />
                       </video>
