--- a/mobile/main.html
+++ b/mobile/main.html
@@ -405,7 +405,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx saleType">
                                             <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -431,7 +431,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -455,7 +455,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx saleType">
                                             <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -479,7 +479,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -505,7 +505,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -531,7 +531,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -555,7 +555,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -579,7 +579,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -950,7 +950,7 @@
                                         <dl data-aos="fade-up">
                                             <!-- <dt>테마 기획전</dt> -->
                                             <dd class="txtTit">연비걱정 NO!<br><span class="txtRed">전기차</span> 기획전</dd>
-                                            <dd class="txtEx">신속출고<br /> 인기전기차 특가</dd>
+                                            <dd class="txtEx">신속출고 인기전기차 특가</dd>
                                         </dl>
                                         <!-- <a href="#" class="btnView" data-aos="fade-right">차량 더보기</a> -->
                                         <i class="icon1" data-aos="fade-up"></i>
@@ -961,9 +961,10 @@
                                 <ul class="carThemeList">
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car1.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="state">상담진행중</span>
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -980,9 +981,9 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car2.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -999,11 +1000,10 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
-
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="state">상담진행중</span>
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1020,10 +1020,9 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car4.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1040,10 +1039,9 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car1.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1058,10 +1056,9 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car2.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1078,10 +1075,9 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1098,10 +1094,9 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <span class="state">상담진행중</span>
-                                            <span class="saleType">구매</span>
                                             <div class="imgBx">
-                                                <img src="./images/renew/sample_car4.png" alt="자동차샘플">
+                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
+                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
