--- a/mobile/main.html
+++ b/mobile/main.html
@@ -285,7 +285,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -301,7 +301,7 @@
                                 </li>
                                 <li class="swiper-slide">
                                     <a href="#">
-                                        <div class="imgBx">
+                                        <div class="imgBx saleType">
                                             <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -317,7 +317,7 @@
                                 </li>
                                 <li class="swiper-slide">
                                     <a href="#">
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
